test_suite/alan-2022-examples/passing/000260_deriv.alan
source J6 begin leave; put ":" end
