test_suite/alan-2022-examples/failing/004290_mutation.alan
source P begin leave; false end
